--- a/dagengren/story/270.html
+++ b/dagengren/story/270.html
@@ -115,8 +115,8 @@ With a wry smile at his own reaction, Xu Xinnian relaxed a little. His hands sto
 *So idly I fish by a shallow limpid stream,*   
 *Dreaming of sailing towards the sun’s far reach.*
 
-*Oh, travelling is hard! Travelling is hard!*   
-*So many crossroads; which to choose?*   
+*Oh, the road is hard! The road is hard!*   
+*Crossroads abound; which to choose?*   
 *When the winds are high and the waves are tall,*   
 *I’ll hoist my sails over the ocean blue.[^1][^2]*
 
@@ -266,7 +266,7 @@ Zhong Li nodded pitifully, then added, “I’ve discovered that your sister’s
 
 ---
 
-[^1]: 《行路难》 *Travelling is Hard* by Li Bai. Translation Mine.
+[^1]: 《行路难》 *Ode to the Difficult Road* by Li Bai. Translation Mine.
 [^2]: Author’s note: Poetry in the civil service examinations are usually not of the *qiyan* format. I’ve slightly modified the process in this alternative world for narrative purposes
 
 </div>
