--- a/dagengren/story/279.html
+++ b/dagengren/story/279.html
@@ -47,7 +47,7 @@ When they reached the fifties, Auntie became even more nervous, her brows furrow
 
 As they approached the top ten, Auntie’s face turned pale, feeling that her son was very likely to fail.
 
-Xu Xinnian, meanwhile, was both anxious and excited. It was a moment of make-or-break. Thinking of his elder brother's poem *Travelling is Hard* and his own diligent efforts, he still had a bit of confidence.
+Xu Xinnian, meanwhile, was both anxious and excited. It was a moment of make-or-break. Thinking of his elder brother's poem *Ode to the Difficult Road* and his own diligent efforts, he still had a bit of confidence.
 
 Finally, the voice called out: “This exam’s _huiyuan_, Xu Xinnian, of Cloud Deer Academy, native of the capital.”
 
