--- a/dagengren/story/280.html
+++ b/dagengren/story/280.html
@@ -164,8 +164,8 @@ Wang Zhenwen ignored her and, riding the surge of inspiration swelling in his ch
 _"Clear wine in golden goblets, ten thousand cash a cup,_     
 _Delicacies on jade platters, a myriad silver more...."_
 
-_"Oh, travelling is hard! Travelling is hard!,_    
-*So many crossroads; which to choose?*     
+*"Oh, the road is hard! The road is hard!*     
+*Crossroads abound; which to choose?,*    
 *When the winds are high and the waves are tall,*     
 _I’ll hoist my sails over the ocean blue."_
 
@@ -183,7 +183,7 @@ Wang Zhenwen shook his head, took a sip of the ginseng soup, and exhaled content
 
 "When I reinstated poetry into the civil examinations years ago, it took no small effort. The opposition was fierce," Wang Zhenwen tapped the paper with his fingers, his smile broad. "Now that such a fine work has emerged, I can finally hold my head high. It’s a vindication for the scholars of the world, and for our ancestors. We didn’t let the treasure of poetry fade into oblivion."
 
-After the publishing of the Plum List, Xu Xinnian’s poem *Travelling is Hard* quickly spread among the examiners, who praised it with enthusiasm, calling it stirring and inspiring. In a few more days, after it had time to percolate, this poem would be sung and celebrated throughout the capital.
+After the publishing of the Plum List, Xu Xinnian’s poem *Ode to the Difficult Road* quickly spread among the examiners, who praised it with enthusiasm, calling it stirring and inspiring. In a few more days, after it had time to percolate, this poem would be sung and celebrated throughout the capital.
 
 "I heard that this huiyuan is a scholar of the Cloud Deer Academy," Miss Wang said "offhandedly."
 
@@ -278,6 +278,7 @@ The messenger continued and took out a slip of paper from his robe. "The examine
 "A poem?"
 
 The Great Scholars exchanged glances.
+
 
 </div>
 
