--- a/dagengren/story/281.html
+++ b/dagengren/story/281.html
@@ -46,7 +46,7 @@ His dream laden boat sailing atop the Milky way", Zhao Shou had merely smiled in
 
 Zhang Shen took it and read it together with the other two great scholars. Their expressions froze, and they, like Zhao Shou earlier, were overwhelmed by emotions they couldn't immediately shake off.
 
-“‘Oh, travelling is hard! Travelling is hard! So many crossroads; which to choose? When the winds are high and the waves are tall, I’ll hoist my sails over the ocean blue.’” Li Mubai suddenly broke into tears, lamenting, "This poem speaks of our Cloud Deer Academy."
+“‘Oh, the road is hard! The road is hard! Crossroads abound; which to choose? When the winds are high and the waves are tall, I’ll hoist my sails over the ocean blue.’” Li Mubai suddenly broke into tears, lamenting, "This poem speaks of our Cloud Deer Academy."
 
 Zhang Shen and Chen Tai clenched their fists in agreement. They now understood why Zhao Shou had lost his composure. Li Mubai was right—this poem was written for the Cloud Deer Academy.
 
