--- a/dagengren/story/301.html
+++ b/dagengren/story/301.html
@@ -221,7 +221,7 @@ Xu Xinnian had already learned of her identity, and bowed slightly. "Miss Wang."
 
 "Miss Simu," he said politely.
 
-Wang Simu smiled faintly and cast her gaze over the scholars and noblewomen who had left their seats to explore the garden. In a soft voice, she said, "That poem of yours, _Travelling is Hard_, I have it mounted in my room and look at it every day."
+Wang Simu smiled faintly and cast her gaze over the scholars and noblewomen who had left their seats to explore the garden. In a soft voice, she said, "That poem of yours, _Ode to the Difficult Road_, I have it mounted in my room and look at it every day."
 
 "In terms of poetry, my elder brother’s work is the finest," Xu Erlang said, before adding modestly, "But of course, true poetry is a natural gift, an occasional stroke of brilliance. I, too, have had my moments of inspiration."
 
@@ -345,7 +345,7 @@ Everyone was stunned, completely taken aback by Xu Xinnian's decisiveness—he h
 
 "Everyone here is a witness. I'll take her to see the officials right now, and I hope you all will serve as witnesses."
 
-After speaking, Xu Xinnian glared at the purple-robed girl, his tone icy. "I won't be taking her to the Ministry of Law or the prefecture office. I'll be taking her to the Nightwatchers Constabulary."
+After speaking, Xu Xinnian glared at the purple-robed girl, his tone icy. "I won't be taking her to the Ministry of Justice or the prefecture office. I'll be taking her to the Nightwatchers Constabulary."
 
 Everyone's faces changed dramatically.
 
@@ -397,7 +397,7 @@ Xu Lingyue said: "Miss Wang has an extraordinary demeanor and handled the situat
 
 From start to finish, she had managed the situation, even though it had nothing to do with her. Her attitude of taking responsibility was commendable; she had the air of a leader.
 
-Xu Xinnian smirked. "That's only part of it. After you fell into the water, she didn’t let you change clothes at her estate. That was a display for both that brat from the Ministry of Law, and for us.
+Xu Xinnian smirked. "That's only part of it. After you fell into the water, she didn’t let you change clothes at her estate. That was a display for both that brat from the Ministry of Justice, and for us.
 
 "Lingyue, you deliberately fell into the water, didn't you?"
 
