--- a/dagengren/story/314.html
+++ b/dagengren/story/314.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 313. Xu Cijiu can Write Poetry? Pah!
+# 314. Xu Cijiu can Write Poetry? Pah!
 
 “His matters are not my concern.”
 
@@ -271,7 +271,7 @@ In the classics and Confucian principles, Xu Cijiu was undoubtedly excellent, bu
 
 “But everyone respects Xu Cijiu’s achievement.”
 
-Another student from the Imperial Academy shook his head and recited, “Oh, travelling is hard! Travelling is hard! So many crossroads; which to choose? When the winds are high and the waves are tall, I’ll hoist my sails over the ocean blue.
+Another student from the Imperial Academy shook his head and recited, “Oh, the road is hard! The road is hard! Crossroads abound; which to choose? When the winds are high and the waves are tall, I’ll hoist my sails over the ocean blue.
 
 “Whenever I revisit this poem, I feel a surge of passion. Any hardship or danger seems trivial. Haha! Let’s drink to that!”
 
