--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -421,6 +421,8 @@
         <li><a href="./story/312.html">Truly a Divine Man</a></li>
         <li><a href="./story/313.html">Information for Medicine</a></li>
         <li><a href="./story/314.html">Xu Cijiu can Write Poetry? Pah!</a></li>
+        <li><a href="./story/315.html">Imperial Examination Fraud</a></li>
+        <li><a href="./story/316.html">A Way</a></li>
     </ol>
 
     <hr>
