--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -423,6 +423,7 @@
         <li><a href="./story/314.html">Xu Cijiu can Write Poetry? Pah!</a></li>
         <li><a href="./story/315.html">Imperial Examination Fraud</a></li>
         <li><a href="./story/316.html">A Way</a></li>
+        <li><a href="./story/317.html">How to Solve This?</a></li>
     </ol>
 
     <hr>
