--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -424,6 +424,7 @@
         <li><a href="./story/315.html">Imperial Examination Fraud</a></li>
         <li><a href="./story/316.html">A Way</a></li>
         <li><a href="./story/317.html">How to Solve This?</a></li>
+        <li><a href="./story/318.html">Auntie and Miss Wang's Ranged Duel</a></li>
     </ol>
 
     <hr>
