--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -425,6 +425,7 @@
         <li><a href="./story/316.html">A Way</a></li>
         <li><a href="./story/317.html">How to Solve This?</a></li>
         <li><a href="./story/318.html">Auntie and Miss Wang's Ranged Duel</a></li>
+        <li><a href="./story/319.html">The Hidden Mastermind Surfaces</a></li>
     </ol>
 
     <hr>
