--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -426,6 +426,7 @@
         <li><a href="./story/317.html">How to Solve This?</a></li>
         <li><a href="./story/318.html">Auntie and Miss Wang's Ranged Duel</a></li>
         <li><a href="./story/319.html">The Hidden Mastermind Surfaces</a></li>
+        <li><a href="./story/320.html">Alone Halting the Many Servants</a></li>
     </ol>
 
     <hr>
@@ -436,7 +437,7 @@
             <li>Fear 貳拾</li>
             <li>TendouKurou 肆</li>
             <li>Laxarus 貳拾</li>
-            <li>Aj Vi 肆</li>
+            <li>Aj Vi 捌</li>
             <li>Laxarus 叄拾伍</li>
         </ul>
     </p>
