--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -427,6 +427,7 @@
         <li><a href="./story/318.html">Auntie and Miss Wang's Ranged Duel</a></li>
         <li><a href="./story/319.html">The Hidden Mastermind Surfaces</a></li>
         <li><a href="./story/320.html">Alone Halting the Many Servants</a></li>
+        <li><a href="./story/321.html">Taking a Disciple</a></li>
     </ol>
 
     <hr>
