神海闲谈用传承字体

--- a/shxt/index.html
+++ b/shxt/index.html
@@ -64,7 +64,7 @@
             本書者，說神海世界之奇事也。是魔神之園，洪荒之天下，龍妖猛獸不計其數，人靈萬族同處一間，歷經悠長，萬年不足道之。洪荒至今，多有遺傳、怪說、閑事，同集一卷，神海閑談是也。
         </p>
         <p>
-            （古書右左豎行，下滑則自動移之）
+            （古書右左豎行，下滑則自動移之。今谷歌中文字體大發，能以傳承字體示之。）
         </p>
 
         <hr>
