--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -428,6 +428,7 @@
         <li><a href="./story/319.html">The Hidden Mastermind Surfaces</a></li>
         <li><a href="./story/320.html">Alone Halting the Many Servants</a></li>
         <li><a href="./story/321.html">Taking a Disciple</a></li>
+        <li><a href="./story/322.html">Honour a Promise</a></li>
     </ol>
 
     <hr>
