--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -429,6 +429,7 @@
         <li><a href="./story/320.html">Alone Halting the Many Servants</a></li>
         <li><a href="./story/321.html">Taking a Disciple</a></li>
         <li><a href="./story/322.html">Honour a Promise</a></li>
+        <li><a href="./story/323.html">L</a></li>
     </ol>
 
     <hr>
