--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -430,6 +430,7 @@
         <li><a href="./story/321.html">Taking a Disciple</a></li>
         <li><a href="./story/322.html">Honour a Promise</a></li>
         <li><a href="./story/323.html">L</a></li>
+        <li><a href="./story/324.html">Li Miaozhen Enters the Capital</a></li>
     </ol>
 
     <hr>
