--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -431,6 +431,7 @@
         <li><a href="./story/322.html">Honour a Promise</a></li>
         <li><a href="./story/323.html">L</a></li>
         <li><a href="./story/324.html">Li Miaozhen Enters the Capital</a></li>
+        <li><a href="./story/325.html">Little Friend, I'm a Ghost</a></li>
     </ol>
 
     <hr>
