--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -432,6 +432,7 @@
         <li><a href="./story/323.html">L</a></li>
         <li><a href="./story/324.html">Li Miaozhen Enters the Capital</a></li>
         <li><a href="./story/325.html">Little Friend, I'm a Ghost</a></li>
+        <li><a href="./story/326.html">The Identity of the Body</a></li>
     </ol>
 
     <hr>
