--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -434,6 +434,7 @@
         <li><a href="./story/325.html">Little Friend, I'm a Ghost</a></li>
         <li><a href="./story/326.html">The Identity of the Body</a></li>
         <li><a href="./story/327.html">Recollections of the Su Family</a></li>
+        <li><a href="./story/328.html">The Palace Examination</a></li>
     </ol>
 
     <hr>
