--- a/dagengren/story/327.html
+++ b/dagengren/story/327.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 327X. Recollections of the Su Family
+# 327. Recollections of the Su Family
 
 Wei Yuan stepped forward, clasped his hands, and declared in a resonant voice, “In times of peace, military households can be self-sufficient from their fields. When war breaks out, the court must allocate provisions and supplies—this is a fundamental principle.”
 
