--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -435,6 +435,7 @@
         <li><a href="./story/326.html">The Identity of the Body</a></li>
         <li><a href="./story/327.html">Recollections of the Su Family</a></li>
         <li><a href="./story/328.html">The Palace Examination</a></li>
+        <li><a href="./story/329.html">Challenge</a></li>
     </ol>
 
     <hr>
