--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -436,6 +436,7 @@
         <li><a href="./story/327.html">Recollections of the Su Family</a></li>
         <li><a href="./story/328.html">The Palace Examination</a></li>
         <li><a href="./story/329.html">Challenge</a></li>
+        <li><a href="./story/330.html">Xu Qi'an: No One Can Fleece Me</a></li>
     </ol>
 
     <hr>
