--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -437,6 +437,7 @@
         <li><a href="./story/328.html">The Palace Examination</a></li>
         <li><a href="./story/329.html">Challenge</a></li>
         <li><a href="./story/330.html">Xu Qi'an: No One Can Fleece Me</a></li>
+        <li><a href="./story/331.html">He's Come</a></li>
     </ol>
 
     <hr>
