--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -96,6 +96,9 @@
         <li><a href="./story/47.html">【龙公子（中）】</a></li>
         <li><a href="./story/48.html">【龙公子（下）】</a></li>
         <li><a href="./story/49.html">【龙威】</a></li>
+        <li><a href="./story/50.html">【凶夜】</a></li>
+        <li><a href="./story/51.html">【惊蛰】</a></li>
+        <li><a href="./story/52.html">【斗龙】</a></li>
     </ol>
 
 </div>
