--- a/baoyu/story/30.html
+++ b/baoyu/story/30.html
@@ -92,9 +92,9 @@
 
 见过程如此简单其余人都暗自松一口气，还好，不要斗了。
 
-「江满。」安夜又道。只见下一个人向前走，过了一会被一个「金珍奇」执事收下。
+「江满。」安府主又道。只见下一个人向前走，过了一会被一个颇为英俊的公子哥模样的「金珍奇」执事收下。
 
-「余仙羽。」
+「余仙羽……纯木性。乐修。田中雄岐收。」余仙羽也被一位皓首苍颜的老者收下。
 
 这样子的过程重复了几遍，轮到了胡贞。
 
@@ -166,14 +166,13 @@
 
 阳忠小心拿起茶壶，填满两个茶杯。茶倒出来的那一刹那，茶香四溢，令阳忠精神一振。倒完茶阳忠还立着，直到姜觉示让他坐下来，他才从命，入座饮茶。这种茶虽然不是仙茶，但已经是凡茶中至上品，对一个凡间富商都很珍贵，姜觉却以之当平时喝的普通货物。
 
-「如老祖所言，你属本座管，但平时居许鳞府。」他的嗓音很淡，没有任何情绪，仿佛对阳忠无动于衷，「本座只负责提供你好的法门、法术等，但你自己需要努力修炼。若遇到难题，当许鳞为师问之，若许鳞不能解答，每三年惊蛰之日可来见本座，问一两题。不问也来，本座要查你的进度，近筑基给应当的帮助。
+「如老祖所言，你属本座管，但平时居许鳞府。」他的嗓音很淡，没有任何情绪，仿佛对阳忠无动于衷，「本座只负责提供你好的法门、法术等，但你自己需要努力修炼。若遇到难题，当许鳞为师问之，若许鳞不能解答，每年惊蛰之日可来见本座，问一两题。不问也来，本座要查你的进度，近筑基给应当的帮助。
 
 「老祖已经告诉我你的资质，上等，前途中应该不会有大问题。」
 
 姜觉放下茶杯，从怀里取出两本书。
 
 「所以费话少说，先给你法术。」
-
 
 
 </div>
