--- a/baoyu/story/41.html
+++ b/baoyu/story/41.html
@@ -72,7 +72,7 @@
 
 「是时汝不可惰。姜长老应见必见，法术应学必学，不唯道书而以单心，害也。
 
-「秋府上开秋学，教文、理、数、历、道、法等，今秋必赴，每秋亦赴，勤考九年，多则十二年，勿若蛮行罪人。寻港内问玄书院。
+「秋府上开秋学，教文、理、数、历、道、法等，今秋必赴，每秋亦赴，勤考九年，多则十二年，以免无文外人。寻港内问玄书院。
 
 「许鳞。」
 
