--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -438,6 +438,7 @@
         <li><a href="./story/329.html">Challenge</a></li>
         <li><a href="./story/330.html">Xu Qi'an: No One Can Fleece Me</a></li>
         <li><a href="./story/331.html">He's Come</a></li>
+        <li><a href="./story/332.html">Minor Accomplishment</a></li>
     </ol>
 
     <hr>
