--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -439,6 +439,8 @@
         <li><a href="./story/330.html">Xu Qi'an: No One Can Fleece Me</a></li>
         <li><a href="./story/331.html">He's Come</a></li>
         <li><a href="./story/332.html">Minor Accomplishment</a></li>
+        <li><a href="./story/333.html">Unexpected Move</a></li>
+        <li><a href="./story/334.html">Report</a></li>
     </ol>
 
     <hr>
