--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -441,6 +441,8 @@
         <li><a href="./story/332.html">Minor Accomplishment</a></li>
         <li><a href="./story/333.html">Unexpected Move</a></li>
         <li><a href="./story/334.html">Report</a></li>
+        <li><a href="./story/335.html">Question</a></li>
+        <li><a href="./story/336.html">First Inferrences</a></li>
     </ol>
 
     <hr>
