--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -42,12 +42,12 @@
 > 焰冠天人山隘至，持矛舞剑势威惊。    
 > 明君齐出仙师猛，湛海红僧龙啸长。
 > 玄帝王爷讥语厉，梧桐弹指七弦狂。    
-> 烽烟四起亡灵众，点火倾天逆五常。
+> 烽烟四起亡灵众，战火倾天逆五常。
 > 尊罪诸神皆触醒，凡间泪血洒浪浪。    
 > 上天怒也毁仙府，人圣三诛四困蒙。
 > 夜守太阴哀坠地，元天再反鬼妖雄。    
 > 东玄独坐君王祚，西岭明皇龙位空。
-> 荒野天间生非易，移民殊死暴雨中。
+> 荒野天间生非易，黎民殊死暴雨中。
 
 八千年前，神战席卷凡间。西方七神教伐东方雨神，最终七神变五，天庭崩裂，雨神重创陷入沉睡。雨神沉睡，暴风暴雨重临人间，肆虐大地。东海深处，魔教抬头，暗流汹涌。雨神不复苏，恐灾难将至。故东海宗常往陆寻弟，求灰昏之下之有一光焉，其继雨家之脉者，藏于苦苦黎民中。不知何图也，能救天下乎？
 
