--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -34,7 +34,7 @@
 
 > 东玄独坐君王祚，展翼孤承百姓忡。
 > 王夫单行星夜路，沾墨默记世言隆。    
-> 西明曾坐圣山位，统帅移民亿万忠。
+> 西明曾坐圣山位，统帅黎民亿万忠。
 > 一日外来尊使傲，宣掀圣战动千戎。    
 > 七光人圣知高过，觊企朝成大业宏。
 > 荒地蛮天神祇远，轻而篡道得多荣。    
