--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -443,6 +443,7 @@
         <li><a href="./story/334.html">Report</a></li>
         <li><a href="./story/335.html">Question</a></li>
         <li><a href="./story/336.html">First Inferrences</a></li>
+        <li><a href="./story/337.html">Snake Trails in the Grass</a></li>
     </ol>
 
     <hr>
