--- a/dagengren/story/336.html
+++ b/dagengren/story/336.html
@@ -185,7 +185,7 @@ This seemed beyond doubt. The Heaven Gu Grandma wouldn’t make such a mistake. 
 
 One of the two thieves from back then had already perished.
 
-Finally, he wrote: _Gu God, Apocalypse!_
+Finally, he wrote: _The Gu God awakens, apocalypse comes!_
 
 Rising to pour himself a cup of cold water, he drank slowly before returning to his desk. Beside _Twenty Years Ago,_ he added: 
 
