--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -444,6 +444,7 @@
         <li><a href="./story/335.html">Question</a></li>
         <li><a href="./story/336.html">First Inferrences</a></li>
         <li><a href="./story/337.html">Snake Trails in the Grass</a></li>
+        <li><a href="./story/338.html">Yang Qianhuan Released</a></li>
     </ol>
 
     <hr>
