--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -445,6 +445,7 @@
         <li><a href="./story/336.html">First Inferrences</a></li>
         <li><a href="./story/337.html">Snake Trails in the Grass</a></li>
         <li><a href="./story/338.html">Yang Qianhuan Released</a></li>
+        <li><a href="./story/339.html">It's Nearly Done?</a></li>
     </ol>
 
     <hr>
