--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -13,7 +13,7 @@
 <c-box>
 
 <header>
-    <h1>神海廣記</h1>
+    <h1>神海作大集</h1>
 
     <img class="seal" style="bottom: 5.5em;" src="/shenhai/assets/seal.webp" alt="Yanwenyuan Seal">
 
@@ -27,6 +27,54 @@
         </p>
     </header-footer>
 </header>
+
+<div class="juan">
+
+    <h2>神海作大集序</h2>
+
+    <p>
+        茫茫神海，天外之天。億萬散界，如礁石般墜於冥海，成片成羣，而爲諸大界。大界有上神、下神、諸仙、庶凡，而又分爲小小諸天。大界之間，其遙也不僅東南西北之遥，而去於異方，何以「里」而言其距。神矣冥海中，某孤羣嶼内，乃一講之啟。諸神多界，人龍靈妖，存百萬年有餘。大劫數運運，小劫動轉轉。往事中多有精彩，來事中多有不知。是諸天之民謂其天下亦神海也，故正名是集《神海作大集》。
+    </p>
+
+    <p>
+        本頁者神海諸天之集作，具有奇傳怪史，說高仙猛妖，諸神之相環。是筆者所創之一景，仙幻西東皆收，多韻合引。初有《神海閑談》一集書本，存於紙間亦存於太虚網上。八回成之。而後有餘文，不適入閑談，亦不舍留而不示，而因必思焉善處鄙網頁。神海閑談頁者，止於是書，而不讓於他章。同再審是頁，本吾欲還中國古風於今之技，章内敢言有成，而仍存小瑕，章外僅用其一二耳。故思：即再作網頁，何不采古籍之美，用其一二之味，全正排諸？
+    </p>
+
+    <p>
+        本序臨眠間而書，慌恐請諒亂文。
+    </p>
+
+</div>
+
+<!-- 
+<header>
+    <h1>神海閑談</h1>
+
+    <img class="seal" style="bottom: 6.5em;" src="/shenhai/assets/seal.webp" alt="Yanwenyuan Seal">
+
+
+    <header-footer>
+        <p>
+            甲辰年
+        </p>
+        <p>
+            燕道人著
+        </p>
+    </header-footer>
+</header> -->
+
+<div class="juan">
+    <h2>神海閑談</h2>
+
+    <p>文言玄幻故事・<em><span class="tight">Tall tales from the Celestial Sea</span></em></p>
+
+    <p>本書者，說神海世界之奇事也。是魔神之園，洪荒之天下，龍妖猛獸不計其數，人靈萬族同處一間，歷經悠長，萬年不足道之。洪荒至今，多有遺傳、怪說、閑事，同集一卷，神海閑談是也。</p>
+
+    <p>〔古書右左豎行，下滑則自動移之。今谷歌中文字體大發，能以傳承字體示之。〕</p>
+
+    <h3><a href="/shxt/">※往閱是書</a></h3>
+
+</div>
 
 </c-box>
 
