--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-        本頁者神海諸天之集作，具有奇傳怪史，說高仙猛妖，諸神之相環。是筆者所創之一景，仙幻西東皆收，多韻合引。初有《神海閑談》一集書本，存於紙間亦存於太虚網上。八回成之。而後有餘文，不適入閑談，亦不舍留而不示，而因必思焉善處鄙網頁。神海閑談頁者，止於是書，而不讓於他章。同再審是頁，本吾欲還中國古風於今之技，章内敢言有成，而仍存小瑕，章外僅用其一二耳。故思：即再作網頁，何不采古籍之美，用其一二之味，全正排諸？
+        本頁者神海諸天之集作，具有奇傳怪史，說高仙猛妖，諸神之相環。是筆者所創之一景，仙幻西東皆收，多韻合引。初有《神海閑談》一集書本，存於紙間亦存於太虚網上。八回成之。而後有餘文，不適入閑談，亦不舍留而不陳，而因必思焉善處鄙網頁。神海閑談頁者，止於是書，而不讓於他章。同再審是頁，本吾欲還中國古風於今之技，章内敢言有成，而仍存小瑕，章外僅用其一二耳。故思：即再作網頁，何不采古籍之美，用其一二之味，全正排諸？
     </p>
 
     <p>
