adjust and alter things on shenhai, move shenhaixiantan over

--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -46,23 +46,6 @@
 
 </div>
 
-<!-- 
-<header>
-    <h1>神海閑談</h1>
-
-    <img class="seal" style="bottom: 6.5em;" src="/shenhai/assets/seal.webp" alt="Yanwenyuan Seal">
-
-
-    <header-footer>
-        <p>
-            甲辰年
-        </p>
-        <p>
-            燕道人著
-        </p>
-    </header-footer>
-</header> -->
-
 <div class="juan">
     <h2>神海閑談</h2>
 
@@ -72,7 +55,7 @@
 
     <p>〔古書右左豎行，下滑則自動移之。今谷歌中文字體大發，能以傳承字體示之。〕</p>
 
-    <h3><a href="/shxt/">※往閱是書</a></h3>
+    <h3><a href="shxt">※往閱是書</a></h3>
 
 </div>
 
