--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
             </li>
             <li>
-                <a href="./shxt/">神海閑談：Tall Tales from the Celestial Sea</a>
+                <a href="./shenhai/">神海大作集：Collections from the Celestial Sea</a>
             </li>
             
             
