--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -53,10 +53,14 @@
 
     <p>本書者，說神海世界之奇事也。是魔神之園，洪荒之天下，龍妖猛獸不計其數，人靈萬族同處一間，歷經悠長，萬年不足道之。洪荒至今，多有遺傳、怪說、閑事，同集一卷，神海閑談是也。</p>
 
-    <p>〔古書右左豎行，下滑則自動移之。今谷歌中文字體大發，能以傳承字體示之。〕</p>
-
     <h3><a href="shxt">※往閱是書</a></h3>
 
+</div>
+
+<div class="juan">
+    <h2 id="-">神海廣記</h2>
+    <p>洪洪大虛，泛瀾無數里，無窮無盡。虛水玄玄，孤孤然島群所立，散界相聯，形之一地，有神在上，有凡在下，神通茂茂，其人謂大虛神海。本文集神海孤界中之奇話奇記，特成一冊，專録其事。</p>
+    <h3><a href="shgj">※往閱是書</a></h3>
 </div>
 
 </c-box>
