--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -65,7 +65,7 @@
     
     <blockquote>
         <p>【疏】是篇設於《暴雨》，述神戰暗紀。以今之言，乃人紀已初五百歲，上皇劫是也。</p>
-        <p>【疏】後疏曰：以道門言，星出於龍漢而崩焉。於死神逆天叛戰殉身。古說今之三界爲一，而東西一陸乃中土。所環一海，謂之中海。然死神叛亂，若滅天之災，因道家以之分劫。天崩地裂，原古失傳，大地分於四。其一乃東半天，其碎最大，爲&#x3000;晉仙尊所收，引於極東而化爲大晉二土。其二西半天，其大於凡閒不異，而化爲火海，之虛其敗壞之大矣，收爲&#x3000;靈父之域，爲靈於家，以永久黄昏息焰。其三北天，是非人之地，亦受大裂，爲&#x3000;緋紅魔妇女曳下，於淵邊以鎮罪神。其尾中土，二陸合一，化今凡閒。話說南又有分地，頗小而人忘，儒聖私收築其仙書堂，舊法唯所留。</p>
+        <p>【疏】後疏曰：以道門言，星出於龍漢而崩焉。於死神逆天叛戰殉身。古說今之三界爲一，而東西一陸乃中土。所環一海，謂之中海。然死神叛亂，若滅天之災，因道家以之分劫。天崩地裂，原古失傳，大地分於四。其一乃東半天，其碎最大，爲&#x3000;晉仙尊所收，引於極東而化爲大晉二土。其二西半天，其大於凡閒不異，而化爲火海，之虛其敗壞之大矣，收爲&#x3000;靈父之域，爲靈於家，以永久黄昏息焰。其三北天，是非人之地，亦受大裂，爲&#x3000;緋紅魔女曳下，於淵邊以鎮罪神。其尾中土，二陸合一，化今凡閒。話說南又有分地，頗小而人忘，儒聖私收築其仙書堂，舊法唯所留。</p>
         <p>中海者，天蛟食靈者也，天蛟又謂天龍，二龍之最也。其威若仙而各霸一海，一海無二蛟。是龍也反諸神，大虐元陸，受祖帝所誅。</p>
     </blockquote>
 </div>
