--- a/dagengren/story/341.html
+++ b/dagengren/story/341.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 341X. Life Alchemy
+# 341. Life Alchemy
 
 The rest of the members of the Heaven and Earth Clique were just as astonished as Li Miaozhen. Even the former scholar-gentleman Chu Yuanzhen, looked visibly stunned, his expression frozen in disbelief.
 
@@ -117,7 +117,7 @@ Song Qing proudly explained his progress in Life Alchemy, his tone brimming with
 
 At first, Chu Yuanzhen, Li Miaozhen, and the others approached these revelations with curiosity and a thirst for new knowledge. However, as the explanations continued, the smiles on their faces faded, replaced by increasingly grim expressions. Their gazes toward Song Qing grew wary, as though they were staring at some monstrous aberration.
 
-*Chu Yuanzhen had been right—Song Qing’s mind isn’t entirely sound. This person is dangerously unhinged. If this weren’t the Sitianjian, I would have already carried out justice on behalf of the heavens…* Li Miaozhen thought, suddenly realizing she couldn’t stomach such grotesque experiments despite her initial purpose for coming here.
+*Chu Yuanzhen had been right—Song Qing’s mind isn’t entirely sound. This person is dangerously unhinged. If this weren’t the Sitianjian, I would have already carried out justice on behalf of the heavens…* Li Miaozhen thought, suddenly realising she couldn’t stomach such grotesque experiments despite her initial purpose for coming here.
 
 *I was wrong—Song Qing is the most deranged of all the Jianzheng’s disciples. By comparison, Yang Qianhuan merely suffers from a bit of arrogance…* Chu Yuanzhen thought.
 
