--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -44,6 +44,9 @@
         <a href="#qingyantianzi" class="onpage">青焰天子</a>
     </div>
     <div>
+        <a href="#dongtujuedi" class="onpage">東土絶地</a>
+    </div>
+    <div>
         <a href="#xingfuzhanxiansi" class="onpage">星府斬仙司</a>
     </div>
 </div>
@@ -58,10 +61,10 @@
         漢步西東，龍走之空。<br>
         日月于分，赤天明通。</p>
     </blockquote>
-    <p>西山外之士探天曆，分爲數紀。始曰荒紀，凡間未形，止有神耳。次曰火紀，衆種崛起，不知其幾萬年。三曰前龍紀，爲燕王統天下，皇沙立中沙，共九千年。四曰鋼紀，亂世也，日安之初，同爲長戰，共二千年。王曰後龍記，周統東土，日安宣帝，皇沙再起，三霸天下，共七千年。六七曰複興期、人紀，日安是落，皇沙之分，亂時百六十年，天下歸平，人族稱王，故曰人紀。八曰暗紀，神戰後之絶地。</p>
+    <p>西山外之士探天曆，分爲數紀。始曰荒紀，凡間未形，止有神耳。次曰火紀，衆種崛起，不知其幾萬年。三曰前龍紀，爲<u>燕</u>王統天下，<u>皇沙</u>立中沙，共九千年。四曰鋼紀，亂世也，<u>日安</u>之初，同爲長戰，共二千年。五曰後龍記，<u>周</u>統東土，日安宣帝，皇沙再起，三霸天下，共七千年。六七曰複興期、人紀，日安是落，皇沙之分，亂時百六十年，天下歸平，人族稱王，故曰人紀。八曰暗紀，神戰後之絶地。</p>
     <p>東洲道宗，雖未成係，尙存上古，故亦有曆，然未多傳，書書而忘。其言天有五劫，曰龍漢、赤明、上皇、開皇、延康。火紀初謂之龍漢天，星帝出焉，成東洋，不知其幾萬年。今之天地山、西洲東極沙、西南雨林乃大洋，天蛟<u>食靈者</u>居之，龍漢末世間遭災，死神起反諸神，食靈者爲&#x3000;<u>安</u>〔龍太祖金帝也〕所誅。戰喪星帝，星國崩，後月日立，曰明皇、赤皇，天再平，謂之赤明天。上詩述之。不知其幾萬年。</p>
     <p>赤明兩皇下，東有人五帝，西人有七王。五帝者，星之遺仙也，居萬餘年而升爲晉官，隨晉仙起大晉。七王神也，天母之七子，治萬年序升于天界，開天庭，定死生之規。赤明末神海外来<u>埶命者</u>，凶吉之神，衆島蕩然，劫災無數，凡間失序，皆陷隨機，諸神與之對，終和而留之，乃至上皇天。</p>
-    <p>上皇天即火紀末至於神戰，八千年暗紀上皇災，若雨神再立，日月星同於空，便謂之開皇天。開皇逝，則歸延康。延康者，瓌劫也，延康終乃是世之滅，而大道輪回。</p>
+    <p>上皇天即火紀末至於神戰，八千年暗紀上皇災，若雨神再立，日月星同於空，便謂之開皇天。開皇逝，則歸延康。延康者，壞劫也，延康終乃是世之滅，而大道輪回。</p>
     
     <blockquote>
         <p>【疏】是篇設於《暴雨》，述神戰暗紀。以今之言，乃人紀已初五百歲，上皇劫是也。</p>
@@ -88,6 +91,16 @@
     <p>青焰子者，或謂青焰天子，乃燕時仙師，獨作功法，曰青焰訣。性龍，青甲族人也，靈根異變，凡青龍皆金性，而青焰子獨火性。因修火道，而才華異禀。話說煉氣時而悟大道，凡人至仙人一開神功，而因在煉氣徘徊二百歳，爲旁人所譏。三百年之長，真謂是長矣。六十不築基則遜、三百不金丹則再無上路。而龍族天之驕者，二百不築基鮮聞也哉。故多人以青焰子爲無未者，凡身度生，難稱真龍。故聞之大驚矣，青焰子全其法而五十年金丹也哉。又百年聚嬰，名震中州。</p>
     <p>青焰子性乖行僻，喜怒無常，好收多妾，又不娶妻，不理家事，受族人之不滿。而與異族生多混血兒，雖延青焰之脈，不延青焰之姓。因誹不當子。聚嬰之上乃化神。遥遥化神，可望不可及，燕時天下億人而化神者僅二，皆龍家出身。而青焰五百歳晉化神，又名傳四海，成天下第三化神師。人尊稱之爲青焰天子，敬而遠之。而天下非化神莫能敵之。</p>
     <p>青焰狂修者，仍不罢休，四處尋機破化神而爲真仙，塗中曾有仇于一聚嬰之師，一時激爭而性暴動手，殺是修士。只不幸是人姓歐陽名可，東北金華山之出，祖爺乃大燕仙師之最，去仙咫尺遠，開山立派者：歐陽坤是也。歐陽坤親孫爲殺，怒震九萬里，出山尋青焰，以雪是仇。青焰雖雄，歐陽祖前不若鳥鷄，欲逃之夭夭，然天下有際，年後追及，於諸蘭部之寒原深處作戰，各大神通，足以毁此方天地，化冰裂土，化爲絶境，而青焰子落焉。話說雖歐陽祖得青焰之功，未得其天寶，能引是至火功之青焰扇，是無影無踪。</p>
+</div>
+
+<div class="juan">
+    <h2 id="dongtujuedi">東土絶地</h2>
+    <p>山高土廣，峰險谷陰。洪荒之天下，多有凶危，藏於寰外僻壤，謂是絶地。絶者，終也，亡也，喻是地入者未還。周邊凡民世世代代，多有話傳，寧行千里而避是域。時凶暴出，而黎民殘衆，時凶儉内，而危害藏息。然則危則有機，仙師求大道，其途遙遙，欲以速之，常需珍稀，多臥於是類之險處，因入尋寶，而生死難料。東海星府入門之驗，有一句話，曰：「反天而步，能常行兮？」</p>
+    <p>西山降魔古，自先燕而存，位於西山張桑北界某處。長四五百里，寛百里有餘，常年瘴氣彌漫，高高聚嬰亦叵奈之。話說先燕時，是谷歷一人魔大戰，冥界真魔圖犯人間，而桑、燕、諸苗之高修紛紛來抗，化神人修，冥國魔王，是半仙之種，大開殺戒，天寶齊出，高法玄術，碎裂虛空。使谷中空隙衆衆，是無寛之洞，飄遊空間，細如絲綫，明如光痕。而莫劍同其利。使魔瘴之氣生然，黑霧若墨洗，被山籠地，稠若滯血，暗若真冥。而莫毒同其侵。落寶奇草之多，使後仙難不垂涎，而五旬之歲一環，降魔谷瘴氣散，多人尋珍入，少人終能出。</p>
+    <p>昕漠夜嘯峽同，至陰之地，裂沙而出，若天塹無際。位於深沙中，却砂石近千里，鮮有人影，故相傳不多。歲月不知其數，然則年年不顯，至中常之末，中原大發，多有外遊者，方逹是遙地，而載入史中。其深不知幾十里，直至地心中，是熔江翻湧之處，生炎龍之獸，其妒守下域，凡外皆滅。而上之陰物衆然，鬼怪無數，又未如右者珍寶之多，閑人焉輕往？唯修陰之士，煉寶之人，有往是谷，渡九死一生而采陰料助器，成之，則望有大威。</p>
+    <p>云山仙鶴關，雖顏其名，險其實矣，鶴妖之鄉是也。藏雲通邊某霧山中。鶴妖集，而智同於人，靈基勝然，而見外則攻，故非輕敵。鶴關妖氣異重，而鶴者，浩然之象，双氣交而靈草花生，能煉奇藥多類。有人往，而鮮生反。昔鶴共萬妖同處天下，而與諸苗多爭，至大戰而傷死無數。因古師人鶴合約，分地不交，而一方敢闖彼方，則高仙不將聞。</p>
+    <p>神湖天淵目，神湖下之巨淵，其歷悠哉，而險莫知。自古如今而爲鎮壓於一神山下，孤立神湖中。是山之仙府謂之神湖山，中原首宗，古命守天目。山周二百里，皆爲禁地，未通而入者必殺。昔說淵目真逹冥間，若降魔古一介容二界相往，諸苗尚盛，魔軍破出，五將爲領，皆化神大修，而苗二方晉，燕二亦然，不若魔族。戰於絶境，中土破裂，苗師一人深入敵營，施法封道，而短冥間真魔氣。因而獲勝，然人間四化神，盡皆隕喪。是事之真否，未證其是。</p>
+    <p>黑河三陰城，位北原荒野中，去黑河數百里有餘。人說曾在常時出，大常廣廣，自海至沙，一統天下，北征諸蘭，南服諸蠻，東降太後，西和土叻。而道法大興，不論正魔萬道皆昌然。北原三陰門，魔派小宗也，立於崅州，弟少而強。掌門任崅州尹，作事乖邪，然任官正經，崅州稳交稅銀，而朝廷不問其過。說是掌門逹聚嬰，求大秘法，於野外建大城，掠草原諸蘭之人爲邪用，如此數年。一日崅州城聞大震，衙人外探之，但見魔氣遍野鬼魅凄嘯，少掌門即金丹大城而弗可逹，掌門秘法大差，三陰城已禁地。後人設法陣誤凡人，而是城多爲忘。</p>
 </div>
 
 <div class="juan">
