--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -77,7 +77,7 @@
     <h2 id="xuanyanghaijiao">玄陽海蛟</h2>
     <p>詩云</p>
     <blockquote>
-    <p>日墨雷鳴風嘯嘯，<br>電揚水裂岭摇摇。<br>冥空雲散威平海，<br>暴主玄陽義善寥。</p>
+    <p>日墨雷鳴風嘯嘯，電揚水裂岭摇摇。<br>冥空雲散威平海，暴主玄陽義善寥。</p>
     </blockquote>
     <p>話說龍祖之神金帝&#x3000;安有三子，是生三龍。長曰天，次曰地，三曰人。天也虛生，空海覺靈，巍巍蟒蛟，神威滔滔。長也不知幾千里，神龍見首不見尾。地也實化，熔漿生魂，脩脩長虯，土靈幽幽。長也百里，以炎脈爲家，隱秘而不出。人也山起，四足雙翼，是爲最弱，而數衆然。雖生最爲凡，心思有靈，壽限，而因有志，有志，而入人文、作人王，因統天下。</p>
     <p>再說天龍，或稱天蛟，生于深海，雷雨成形，其與仙不上下，威鎮四方，天下莫敵。然以其強承上天之機，爲天劫之化身，一世安容是多邪哉，故有言曰：一龍霸一海，一海無二龍，又曰：是禽獸之王，天地之驕。天蛟壽漫，鮮涉凡間，因隱，自享大道，而黎民鮮知其存。</p>
