--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -448,6 +448,7 @@
         <li><a href="./story/339.html">It's Nearly Done?</a></li>
         <li><a href="./story/340.html">Visiting the Sitianjian</a></li>
         <li><a href="./story/341.html">Life Alchemy</a></li>
+        <li><a href="./story/342.html">Court Appointment</a></li>
     </ol>
 
     <hr>
