--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -449,6 +449,7 @@
         <li><a href="./story/340.html">Visiting the Sitianjian</a></li>
         <li><a href="./story/341.html">Life Alchemy</a></li>
         <li><a href="./story/342.html">Court Appointment</a></li>
+        <li><a href="./story/343.html">Northward Bound</a></li>
     </ol>
 
     <hr>
