广记中更清释何书中疏何笔者附注以明设时

--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -70,9 +70,9 @@
     <p>上皇天即火紀末至於神戰，八千年暗紀上皇災，若雨神再立，日月星同於空，便謂之開皇天。開皇逝，則歸延康。延康者，壞劫也，延康終乃是世之滅，而大道輪回。</p>
     
     <blockquote>
-        <p>【疏】是篇設於《暴雨》，述神戰暗紀。以今之言，乃人紀已初五百歲，上皇劫是也。</p>
         <p>【疏】後疏曰：以道門言，星出於龍漢而崩焉。於死神逆天叛戰殉身。古說今之三界爲一，而東西一陸乃中土。所環一海，謂之中海。然死神叛亂，若滅天之災，因道家以之分劫。天崩地裂，原古失傳，大地分於四。其一乃東半天，其碎最大，爲&#x3000;晉仙尊所收，引於極東而化爲大晉二土。其二西半天，其大於凡閒不異，而化爲火海，之虛其敗壞之大矣，收爲&#x3000;靈父之域，爲靈於家，以永久黄昏息焰。其三北天，是非人之地，亦受大裂，爲&#x3000;緋紅魔女曳下，於淵邊以鎮罪神。其尾中土，二陸合一，化今凡閒。話說南又有分地，頗小而人忘，儒聖私收築其仙書堂，舊法唯所留。</p>
         <p>中海者，天蛟食靈者也，天蛟又謂天龍，二龍之最也。其威若仙而各霸一海，一海無二蛟。是龍也反諸神，大虐元陸，受祖帝所誅。</p>
+        <p>【筆注】是篇設於《暴雨》，述神戰暗紀。以今之言，乃人紀已初五百歲，上皇劫是也。</p>
     </blockquote>
 </div>
     
@@ -111,7 +111,7 @@
     <p>凡宗門者，自有律法，以守秩序。犯小則罸，犯大則廢。東海星府变然，多有條理，而護法守之。話說星府真神之麾下莫能與敵，可東海凶然，暗水深深，卻有魔淵府，更有死神教之徒。是死神者，龍漢古神也，曾有大尊，牧送亡靈，而叛諸神圖篡祚，爲之所殺。真神何能易死哉？大弱而鎮壓於冥界。百萬年矣，大輪將回，月神空席，圖以之反真座，因危星家。</p>
     <p>拜入星府者，皆必誓云罪之罸者曰：輕誅吾身，重誅吾家。星府斬仙司，最高律者也，自分府行宗府學秘法，不除魔降妖於外而除魔降妖於内。叛府者，是賣情、釋魔、弑已同門等，皆必面斬仙司。其修高罪大，執事不可降，皆必面斬仙司。盟友有野仙叛出，亦請斬仙司走一番。是宗府司郎，鮮知其真情，止有說皆元嬰道人，神通廣然，彈指滅門。</p>
     <blockquote>
-        【疏】是篇言稍越現時，喻星尊歸位，神宗已創多年。
+        【筆注】是篇言稍越現時，喻星尊歸位，神宗已創多年。
     </blockquote>
 </div>
 
