--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -48,7 +48,7 @@
     <p>However, just like the sun’s rays gleaming over the towering mountains, after each sunset, a new sun will rise.</p>
 
     <p>
-        <i>Translators: Daoist Yan, Infernal</i>
+        <i>Translators: Daoist Yan, Anthethesis</i>
     </p>
 
     <p><i>
@@ -450,6 +450,7 @@
         <li><a href="./story/341.html">Life Alchemy</a></li>
         <li><a href="./story/342.html">Court Appointment</a></li>
         <li><a href="./story/343.html">Northward Bound</a></li>
+        <li><a href="./story/344.html">Brushing Chamberpots</a></li>
     </ol>
 
     <hr>
