add rss feed for dgr

--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -118,7 +118,7 @@
 <div class="juan">
     <h2 id="lizhoulang">麗州郎</h2>
     <p>話說<u>安文</u>之變無處不遭災，<u>芒炎</u>軍自北至南，至東至西，留毁亡於後，百姓殘死重重。惟北原<u>河東</u>某州不然。河東多原少險，四方易行，鮮有林木高山。遠河東南<u>丈</u>邑下有林焉，廣五百里，分三县，歸爲<u>麗州</u>府〔平聲〕。安文之變，半百年戰之巔也，<u>律</u>將安文自北趙而起興，肆劫天下，麗北丈邑半滅，而麗州庶衆免災。律朝，其敬而不服，安將，其恭而不降。即芒炎軍不知天高地厚，不思百姓民心，又未取麗州。何也？區區一州，能保安泰，功歸所謂麗州郎。<u>呂</u>國王藏有記云：</p>
-    <p>自<u>聞</u>代或早之，麗州已立仙宗，曰麗州劍派。弟少而限於縣，鮮出因少聞其存。則同在芒炎亂天下之時，曾有宗主精彩絶豔，劍法無雙，能越境而戰。金丹滿期，而弑聚嬰。同任麗州府尹，律國官，貌青年春，因民公呼官爺，私言麗州郎。昔吾先祖居<u>律蘭</u>北界，南有大律朝歌，北有<u>諸蘭</u>蠻野。安文之變順遍天下，吾祖難免動蕩。時芒炎軍來家保，吾氏昔貧少友，又近漢兵〔安文取天下而建漢四十月而崩故有曰漢〕速潰四散。某祖姑逃於諸蘭草地，即脫芒炎劫而入<u>遼</u>蘭災。諸蘭之北遼者，生而猛悍，天資勝然，雖人族則高手衆衆。是夷部好獵吾龍家收皮作衣，祖姑遭其聚嬰凶手，追杀近月，性命一綫，南入亂國河東，追至麗州林中。是千鈞一髮將死之多冤，一劍若雷虹天外而來，截北遼殺手，但見蒼黑披衣，隱有緋内，負手踏天而來，金丹之修而輕住聚嬰，從容行禮，回解外衣，見四品官服，緋綢魚帶。提劍作戰，百回而不分上下，記云遼人修金，劍師修木，木金所克隱有不妙。俄祖姑聞傳音，平然其辭而明記至崩，曰：仙子見時。請賜神火。又百回而遼人步差，一時有缺，祖姑吐火，火克金而殺之。蠻盡，而再作禮，稱己曰楊玉鈞，字指璧，麗州尹是也。賜祖姑仙藥，請留麗州林中休愈。戰時之緊，楊尹未送，見無命危而辭之。數十載逝，漢立速崩，李氏平天下，祖姑又訪麗州，擕家之命。吾家助李得功，命爲镇北侯，後承命滅遼。其請府尹出山，隨征北蠻而爲国師，而如願可賜呂龍尊姓。楊尹應之。今麗州劍派依居<u>冬來</u>〔龍語曰馬砬亥〕，固我國而師吾民。</p>
+    <p>自<u>聞</u>代或早之，麗州已立仙宗，曰麗州劍派。弟少而限於縣，鮮出因少聞其存。則同在芒炎亂天下之時，曾有宗主精彩絶豔，劍法無雙，能越境而戰。金丹滿期，而弑聚嬰。同任麗州府尹，律國官，貌青年春，因民公呼官爺，私言麗州郎。昔吾先祖居<u>律蘭</u>北界，南有大律朝歌，北有<u>諸蘭</u>蠻野。安文之變順遍天下，吾祖難免動蕩。時芒炎軍來家堡，吾氏昔貧少友，又近漢兵〔安文取天下而建漢四十月而崩故有曰漢〕速潰四散。某祖姑逃於諸蘭草地，即脫芒炎劫而入<u>遼</u>蘭災。諸蘭之北遼者，生而猛悍，天資勝然，雖人族則高手衆衆。是夷部好獵吾龍家收皮作衣，祖姑遭其聚嬰凶手，追杀近月，性命一綫，南入亂國河東，追至麗州林中。是千鈞一髮將死之多冤，一劍若雷虹天外而來，截北遼殺手，但見蒼黑披衣，隱有緋内，負手踏天而來，金丹之修而輕住聚嬰，從容行禮，回解外衣，見四品官服，緋綢魚帶。提劍作戰，百回而不分上下，記云遼人修金，劍師修木，木金所克隱有不妙。俄祖姑聞傳音，平然其辭而明記至崩，曰：仙子見時。請賜神火。又百回而遼人步差，一時有缺，祖姑吐火，火克金而殺之。蠻盡，而再作禮，稱己曰楊玉鈞，字指璧，麗州尹是也。賜祖姑仙藥，請留麗州林中休愈。戰時之緊，楊尹未送，見無命危而辭之。數十載逝，漢立速崩，李氏平天下，祖姑又訪麗州，擕家之命。吾家助李得功，命爲镇北侯，後承命滅遼。其請府尹出山，隨征北蠻而爲国師，而如願可賜呂龍尊姓。楊尹應之。今麗州劍派依居<u>冬來</u>〔龍語曰馬砬亥〕，固我國而師吾民。</p>
     <p>又有詩曰：</p>
     <blockquote>
         青林百里不生荒，三縣平安一刄光。<br>
