--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -451,6 +451,7 @@
         <li><a href="./story/342.html">Court Appointment</a></li>
         <li><a href="./story/343.html">Northward Bound</a></li>
         <li><a href="./story/344.html">Brushing Chamberpots</a></li>
+        <li><a href="./story/345.html">Draw blades</a></li>
     </ol>
 
     <hr>
