--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -452,6 +452,7 @@
         <li><a href="./story/343.html">Northward Bound</a></li>
         <li><a href="./story/344.html">Brushing Chamberpots</a></li>
         <li><a href="./story/345.html">Draw blades</a></li>
+        <li><a href="./story/346.html">Conversation in the Night</a></li>
     </ol>
 
     <hr>
