--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -454,6 +454,7 @@
         <li><a href="./story/345.html">Draw blades</a></li>
         <li><a href="./story/346.html">Conversation in the Night</a></li>
         <li><a href="./story/347.html">Analysing the Reason Why the Princess Consort has Come With Them</a></li>
+        <li><a href="./story/348.html">Ambush</a></li>
     </ol>
 
     <hr>
