--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -456,6 +456,7 @@
         <li><a href="./story/347.html">Analysing the Reason Why the Princess Consort has Come With Them</a></li>
         <li><a href="./story/348.html">Ambush</a></li>
         <li><a href="./story/349.html">Who's going to save me?</a></li>
+        <li><a href="./story/350.html">Escape Plan</a></li>
     </ol>
 
     <hr>
