--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -52,6 +52,9 @@
     <div>
         <a href="#lizhoulang" class="onpage">麗州郎</a>
     </div>
+    <div>
+        <a href="#samakhan" class="onpage">亡國薩瑪汗</a>
+    </div>
 </div>
 
 <div class="juan">
@@ -130,6 +133,25 @@
     <blockquote>
         【疏】階境之殊懸，難以跨越。而高之更然，故金丹抵元嬰，難以爲信。可呂國今實存麗州劍閣，於是名相同，劍法深然，卻不顯於世，未有越境之驚俗之事。麗州已并於丈州而不存，史中是有載陽府尹，辭官隨呂兵北征，封國師號，而後隱名不知其去。是呂氏祖姑更未能定名，未嫁於顯家而本族忘之。
     </blockquote>
+</div>
+
+<div class="juan">
+    <h2 id="samakhan">亡國薩瑪汗</h2>
+    <blockquote>
+       <p>【疏】此篇取自《皇沙外傳》。越西山有靈淵，若無形天塹，再西則係皇沙，居無盡漠海，分封其天下，中土古雄也。</p>
+    </blockquote>
+
+    <p>詩曰：</p>
+
+    <blockquote>
+        <p>亡朝故貴避金鋒，選任正音帥百宗。<br>人國終逃龍國隷，七分天下自圖封。<br>西邦王子求佳配，劫寶屠蛟獻玉容。<br>正座怒言民土滅，誰家敗過一千龍？</p>
+    </blockquote>
+
+    <p>六百載前龍朝崩，皇沙尊國萬歳宏歷就止。龍氏受戮之重，死有八成，存者奔東北之高險，舔傷蓄力。人朝立，而再建沙國，百王之王座下八國合拜，曰婆娑〔讀巴沙〕其最，又曰阿勒莫、曰康托、曰戈羅、曰真那、曰阿赦蘭、曰拉密、曰薩瑪汗七次也。而是故國龍氏則建邦於山，選位正音者統和百家，故謂是正音家，沙人又稱龍居，不題。且言立國未立平，人既取天下，而弗滿人心，社稷變多，天子更易，不題。</p>
+
+    <p>但說東北之國，薩瑪汗是也，西接真那，東臨龍居，南有荒原，北有蠻夷。曾在舊天之下是邦連山通水，運寶稼穀，多有龍氏故鄉，而金銀如水然，可自滅龍之征成業，是地自中改邊，氣運衰然。時新國三百載薩瑪汗室有一太子，名闕，求娶南國康托某公主，而受康王之拒。薩瑪汗者，小國也，窮有金寶。即康托未大，依勝於是邦矣，安不惜愛女送於僻鄉？故設天價。隡瑪汗室經十世之风雨，已易三家，彼時王室囊空如洗，往年饑災已蕩國庫，奉不出彩禮。而太子知敏多謀，自尋金機，自然目望北國龍居。龍氏崩，逃於山中，擕金寶無數。若凡人能翻萬龍之國，一邦弑一龍不亦輕乎？但成，寶財如山，不亦得乎？而未思正音矣。周知茲王正音常居山寨不出，不治界疆。太子點二十精將，親師北行，暗觀山地四旬有餘，瞄一孤龍，穴於外野，不見同部，又不見之龍居之往來。一夜偷近，雷霆出手，取其不料，但見鮮血四濺，怒吟回響，邪火止明一息，夜墨再番来襲。夜間再來，龍已死，而太子方多伤無喪。大賀而各取千金萬珠，劫寶疾反人域。因奉上彩禮，康托王與嫁小女於薩瑪汗，二人歡然，不題。</p>
+
+    <p>卻說那龍死有多冤，屍暴多月，魔氣怨氣徐積，一日有遠親偶來訪之，原來是龍有部，不過鮮相訪耳。見其惨形，大驚失色，忙傳餘部，衆見其所爲殺，獻奏於正音，具序其詳。正音發間之人國，速聞薩瑪汗太子大俠雄功，竟殺一龍，娶大國公主云云。報回正音，是龍君大怒宣敕曰：滅薩瑪汗，殺盡其民，以正國法，以雪弑犯，並以懾人國豎子，免再生圖龍居之意。點名飛軍一千龍，晝來薩瑪汗。小國故有珍寶詭器，又何比千龍天軍。大國婆娑，皇沙之心，自有能與正音相抗之力，而正出繼國之爭，未能師兵援戰。正音自有分寸，薩瑪汗外，寸土不傷，薩瑪汗内，夷爲平地。不論男女老幼，皆死於龍焰之下。時天子理朝，領軍來時，是邦已故，八國變七。正音退山，而皇沙莫可奈之。</p>
 </div>
 
 </c-box>
