--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -458,6 +458,7 @@
         <li><a href="./story/349.html">Who's going to save me?</a></li>
         <li><a href="./story/350.html">Escape Plan</a></li>
         <li><a href="./story/351.html">The Divine and Majestic Silver Gong Xu</a></li>
+        <li><a href="./story/352.html">Xu Qi'an's Scheme</a></li>
     </ol>
 
     <hr>
