--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -459,6 +459,7 @@
         <li><a href="./story/350.html">Escape Plan</a></li>
         <li><a href="./story/351.html">The Divine and Majestic Silver Gong Xu</a></li>
         <li><a href="./story/352.html">Xu Qi'an's Scheme</a></li>
+        <li><a href="./story/353.html">The Princess Consort's Secret</a></li>
     </ol>
 
     <hr>
