--- a/dagengren/story/353.html
+++ b/dagengren/story/353.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 353X. The Princess Consort's Secret
+# 353. The Princess Consort's Secret
 
 *Run Does he mean that the four of us, all fourth rank, have no chance of victory against this kid?* The hot-headed and bloodthirsty Zalmukha was not swayed. He narrowed his eyes, locking onto Xu Qi’an.
 
