--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -461,6 +461,7 @@
         <li><a href="./story/352.html">Xu Qi'an's Scheme</a></li>
         <li><a href="./story/353.html">The Princess Consort's Secret</a></li>
         <li><a href="./story/354.html">Bracelet Snatching</a></li>
+        <li><a href="./story/355.html">The Delegation Reaches the Border</a></li>
     </ol>
 
     <hr>
