--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -462,6 +462,7 @@
         <li><a href="./story/353.html">The Princess Consort's Secret</a></li>
         <li><a href="./story/354.html">Bracelet Snatching</a></li>
         <li><a href="./story/355.html">The Delegation Reaches the Border</a></li>
+        <li><a href="./story/356.html">Interrogating the Delegation</a></li>
     </ol>
 
     <hr>
