神海调整排版

--- a/shenhai/shxt/index.html
+++ b/shenhai/shxt/index.html
@@ -68,9 +68,8 @@
         此傳龍族古詩以說至尊福生雨神之来。
     </blockquote>
     <p>
-        自日灼之地，以曦神之恩，在霧繞深山，雙龍神生於凡之民。其目火紅如旭；其鱗湛藍如海。在日灼之地，湯湯洪水滔天，降災，引饑，使亡。世間無則，人難以生，龍神觀之而嘆，民生之艱。曦神之威，謂天之力，偉偉神法，宿雙龍之氣。世間之亂，其不可堪，因立誓曰，護人鎮難。雙首仰，敕浩天，命風靜，命雨緩。天和人慶，可奉言入他之耳，引他之怒。混沌暥神之暴，震地燃天，金帝之下，皆必顫顛！誰半神者，誰伴法者，敢亂其世，敢鄙其制？其欲撕之成萬碎，可自血不可易，於是分之百萬里，永去而永離。然天地之間，有平衡立，風雨斂其暴，去人而息〔暥、曦神名也。龍類太祖，凡間開者，原字曰日帝曰王尨。〕
+        自日灼之地，以羲神之恩，在霧繞深山，雙龍神生於凡之民。其目火紅如旭；其鱗湛藍如海。在日灼之地，湯湯洪水滔天，降災，引饑，使亡。世間無則，人難以生，龍神觀之而嘆，民生之艱。羲神之威，謂天之力，偉偉神法，宿雙龍之氣。世間之亂，其不可堪，因立誓曰，護人鎮難。雙首仰，敕浩天，命風靜，命雨緩。天和人慶，可奉言入他之耳，引他之怒。混沌暥神之暴，震地燃天，金帝之下，皆必顫顛！誰半神者，誰伴法者，敢亂其世，敢鄙其制？其欲撕之成萬碎，可自血不可易，於是分之百萬里，永去而永離。然天地之間，有平衡立，風雨斂其暴，去人而息〔暥、羲神名也。龍類太祖，凡間開者，原字曰日帝曰王尨。〕
     </p>
-
 </div>
 
 <div class="juan">
@@ -84,8 +83,8 @@
         湳歷公之子名曰祁。祁孝父親民，受衆愛。公重寵之。中原癘，祁外與民，病而反。大夫、道士無能醫。秋，祁死，歷公泣三日三夜，欲複其生，圖萬法而不成；夫之逆天，仙不知魔不敢。於是公徒八千里之燕，陟聖山代往神泉。詩云：
     </p>
     <blockquote>
-        萬丈神山春绿久，無垠大地鳥龍遊。<br>
-        一珠澈水天泉内，映照湳公腹裏愁。
+        萬丈神山春绿久（（無垠大地鳥龍遊<br>
+        一珠澈水天泉内（（映照湳公腹裏愁
     </blockquote>
     <p>
         回首入泉洞，内有清池，徑八十又八丈。公匍匐求曰：「福生雨神，愛萬物之天尊！小人求尊，我兒生而善，愛父愛民，國癘，兒助民，無故中疾。願奉所有，請尊複其生。」久不聲，忽然風起，池上現道尊，面祥和，目青如海，懾如龍。尊對曰：「夫死弗生。」公又求。回曰「爾子德高入天，天規亡勿返也。允爾末次望之，惟勿敢近。」公曰可。遂池中現祁之影，在湖中舟，惬然而渔，面笑目父。公忘神戒近池，觸之而畫碎，凄呼，煙消雲散。公不聽神而魄散。湳無君而亂，滅於鄰邦。
@@ -104,8 +103,8 @@
         天元大陸南岸，靈人淮元之境也，與馮元、南隴共霸天下，以七小國為附，則謂三境七地。淮元連洋城有一海運商人，姓馬名濟勤，曾為北國馮元之外親，因家裂而免其姓，放於極南，運南海之物之北以謀生。濟勤業商多年，見多識廣，且好讀史，故早知南凱之一綫天，日日夢探之其奧也，漸乏其業，故一日會親說己將聚人外探一綫天。靈人自古恐水，深海危機處處，兇險數數，親不與之。濟勤再三請與，再三收絕，親不願其之探深海也，出者少反，一箇濟勤又安破前例？故不出，暗中節銀尋好險之人。靈人壽久，千年而亡，濟勤事商數十年，得一艨，聚二十人同行。一夜留信於家中，自出而往港，與馀人乘艨而去陸地。南帆百日不見陸，忽一日前方遙處天色熾白，近之見海面玄黑，天海之間灰暗不定，似有颶風呼嘯，乃陰陽之交，天地之極，遙遙南凱一綫之天。同行者有一雙道士，同門兄弟，熟習仙法，長者複姓特羅名葛，幼者姓於名斯。早在艨內布仙陣，靜心養神，修器啟法，並教衆人有習法者助，全力駕往天地之極，渡一綫之天，正是：
     </p>
     <blockquote>
-        陰陽沌沌玄明杳，浩海滔滔玉宇搖。<br>
-        孤葉駕風騰水猛，祈終撤陣見新朝。
+        陰陽沌沌玄明杳（（浩海滔滔玉宇搖<br>
+        孤葉駕風騰水猛（（祈終撤陣見新朝
     </blockquote>
     <p>
         綫天之內罡風吹，磨打艨舟如千刀，艨頗精造，以陣之輔難破。水與虛之界變得模糊，小艨乘風而升，順流而進，故未被撕裂，漸漸南下。又過百日，靈玉近盡，衆言北反，濟勤同之，故轉舟而回，然罡風南流，若漩渦循循。北行緩矣，百日而不出，不知東南西北，衆人急了。忽天地震顫，罡風翻湧，上天自白化黑，下地自黑化白，只見灰風之中升一龍首，其大哉庶天三成，其長哉不知幾萬里，不見身不見尾。其威令人戰兢，無疑乃神龍蛟矣，南凱王。見之衆人失聲恐叫，葛最通法，見險而逃，斯隨之。濟勤急駕艨而轉，不顧陣不穩，只顧速去！見兩道士棄之，衆人只能助勤，艨刻之陣亦有動力，然速不如兩道人。只見風中一距爪出，閃過天邊，自帶玄雷，觸忒羅、於兩人，葛忙施護身而受之，被扔於千丈外，七窍流血可命尚保，斯則被得，玄雷僵身，被送入天龍口中，一嚼而亡。葛不顧弟而逃，失在風中，艨上人駭然施盡全力，然霎那一爪觸舟，裂之為百碎，罡風刮身，弱者瞬間切為末，強者如斯一同食下。
@@ -214,11 +213,11 @@
         話說古人謂辰星「遺仙」。余曾乘風之東海，孑孑然走無盡之青，遥遥然見天邊之邑。丹成，故是雲遊尋機。汪洋中散島若碎星，孤嶼中藏秘兮無窮，人強地少，仙宗多爭，且東南之外，有魔淵海府，虎視餘星。余多次避險，偶遇一地，方十餘里，草木茂然，若無人影，似火山久寂。是生地矣，險凶處處，步誤而亡。慎入探之，則見一古墟，必其萬千年之舊而未爲洪天轥轢，非仙人之造不可。然未見洞府之所具，遠而觀之，似廟也、觀也，四壁久夷，止存尺許，主殿無屋，神相早失，可堂中立一石碑，全然若新。兢而又兢，余前以閱之，不敢近觀，遠而勉識。曰：
     </p>
     <blockquote>
-        聖哉繁星，漫哉其天！宏哉其寰，王明暗閒！<br>
-        遺仙齊泣，徒兒順祈，星語若狂，沉河流移。<br>
-        君聲若道，真中玄機，徒兒不足，末塗近離。<br>
-        遺仙齊嘆，百象順出，星目若淵，徒難自起。<br>
-        聖哉繁星，浩哉其言！立碑而拜，盡命爲記！
+        聖哉繁星（）漫哉其天（）宏哉其寰（）王明暗閒<br>
+        遺仙齊泣（）徒兒順祈（）星語若狂（）沉河流移<br>
+        君聲若道（）真中玄機（）徒兒不足（）末塗近離<br>
+        遺仙齊嘆（）百象順出（）星目若淵（）徒難自起<br>
+        聖哉繁星（）浩哉其言（）立碑而拜（）盡命爲記
     </blockquote>
     <p>
         一見下文，目眩欲嘔，背脊寒發，不吉矣若有鬼魔視我。余不敢再審，更不爲記，立而去之，徑反陸地。
