--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -55,6 +55,9 @@
     <div>
         <a href="#samakhan" class="onpage">亡國薩瑪汗</a>
     </div>
+    <div>
+        <a href="#lianglong" class="onpage">兩龍之傳頌歌</a>
+    </div>
 </div>
 
 <div class="juan">
@@ -62,18 +65,18 @@
     <h2 id="daomentianli">道門天曆</h2>
     <p>詩云</p>
     <blockquote>
-    <p>天龍在西，虐虐艱艱。<br>
-        亡主聿誅，之水化山。<br>
-        漢步西東，龍走之空。<br>
-        日月于分，赤天明通。</p>
+    <p>天龍在西（（虐虐艱艱<br>
+        亡主聿誅（（之水化山<br>
+        漢步西東（（龍走之空<br>
+        日月于分（（赤天明通</p>
     </blockquote>
     <p>西山外之士探天曆，分爲數紀。始曰荒紀，凡間未形，止有神耳。次曰火紀，衆種崛起，不知其幾萬年。三曰前龍紀，爲<u>燕</u>王統天下，<u>皇沙</u>立中沙，共九千年。四曰鋼紀，亂世也，<u>日安</u>之初，同爲長戰，共二千年。五曰後龍記，<u>周</u>統東土，日安宣帝，皇沙再起，三霸天下，共七千年。六七曰複興期、人紀，日安是落，皇沙之分，亂時百六十年，天下歸平，人族稱王，故曰人紀。八曰暗紀，神戰後之絶地。</p>
-    <p>東洲道宗，雖未成係，尙存上古，故亦有曆，然未多傳，書書而忘。其言天有五劫，曰龍漢、赤明、上皇、開皇、延康。火紀初謂之龍漢天，星帝出焉，成東洋，不知其幾萬年。今之天地山、西洲東極沙、西南雨林乃大洋，天蛟<u>食靈者</u>居之，龍漢末世間遭災，死神起反諸神，食靈者爲&#x3000;<u>安</u>〔龍太祖金帝也〕所誅。戰喪星帝，星國崩，後月日立，曰明皇、赤皇，天再平，謂之赤明天。上詩述之。不知其幾萬年。</p>
+    <p>東洲道宗，雖未成係，尙存上古，故亦有曆，然未多傳，書書而忘。其言天有五劫，曰龍漢、赤明、上皇、開皇、延康。火紀初謂之龍漢天，星帝出焉，成東洋，不知其幾萬年。今之天地山、西洲東極沙、西南雨林乃大洋，天蛟<u>食靈者</u>居之，龍漢末世間遭災，死神起反諸神，食靈者爲（）<u>安</u>〔龍太祖金帝也〕所誅。戰喪星帝，星國崩，後月日立，曰明皇、赤皇，天再平，謂之赤明天。上詩述之。不知其幾萬年。</p>
     <p>赤明兩皇下，東有人五帝，西人有七王。五帝者，星之遺仙也，居萬餘年而升爲晉官，隨晉仙起大晉。七王神也，天母之七子，治萬年序升于天界，開天庭，定死生之規。赤明末神海外来<u>埶命者</u>，凶吉之神，衆島蕩然，劫災無數，凡間失序，皆陷隨機，諸神與之對，終和而留之，乃至上皇天。</p>
     <p>上皇天即火紀末至於神戰，八千年暗紀上皇災，若雨神再立，日月星同於空，便謂之開皇天。開皇逝，則歸延康。延康者，壞劫也，延康終乃是世之滅，而大道輪回。</p>
     
     <blockquote>
-        <p>【疏】後疏曰：以道門言，星出於龍漢而崩焉。於死神逆天叛戰殉身。古說今之三界爲一，而東西一陸乃中土。所環一海，謂之中海。然死神叛亂，若滅天之災，因道家以之分劫。天崩地裂，原古失傳，大地分於四。其一乃東半天，其碎最大，爲&#x3000;晉仙尊所收，引於極東而化爲大晉二土。其二西半天，其大於凡閒不異，而化爲火海，之虛其敗壞之大矣，收爲&#x3000;靈父之域，爲靈於家，以永久黄昏息焰。其三北天，是非人之地，亦受大裂，爲&#x3000;緋紅魔女曳下，於淵邊以鎮罪神。其尾中土，二陸合一，化今凡閒。話說南又有分地，頗小而人忘，儒聖私收築其仙書堂，舊法唯所留。</p>
+        <p>【疏】後疏曰：以道門言，星出於龍漢而崩焉。於死神逆天叛戰殉身。古說今之三界爲一，而東西一陸乃中土。所環一海，謂之中海。然死神叛亂，若滅天之災，因道家以之分劫。天崩地裂，原古失傳，大地分於四。其一乃東半天，其碎最大，爲（）晉仙尊所收，引於極東而化爲大晉二土。其二西半天，其大於凡閒不異，而化爲火海，之虛其敗壞之大矣，收爲（）靈父之域，爲靈於家，以永久黄昏息焰。其三北天，是非人之地，亦受大裂，爲（）緋紅魔女曳下，於淵邊以鎮罪神。其尾中土，二陸合一，化今凡閒。話說南又有分地，頗小而人忘，儒聖私收築其仙書堂，舊法唯所留。</p>
         <p>中海者，天蛟食靈者也，天蛟又謂天龍，二龍之最也。其威若仙而各霸一海，一海無二蛟。是龍也反諸神，大虐元陸，受祖帝所誅。</p>
         <p>【筆注】是篇設於《暴雨》，述神戰暗紀。以今之言，乃人紀已初五百歲，上皇劫是也。</p>
     </blockquote>
@@ -83,9 +86,9 @@
     <h2 id="xuanyanghaijiao">玄陽海蛟</h2>
     <p>詩云</p>
     <blockquote>
-    <p>日墨雷鳴風嘯嘯，電揚水裂岭摇摇。<br>冥空雲散威平海，暴主玄陽義善寥。</p>
+    <p>日墨雷鳴風嘯嘯（（電揚水裂岭摇摇<br>冥空雲散威平海（（暴主玄陽義善寥</p>
     </blockquote>
-    <p>話說龍祖之神金帝&#x3000;安有三子，是生三龍。長曰天，次曰地，三曰人。天也虛生，空海覺靈，巍巍蟒蛟，神威滔滔。長也不知幾千里，神龍見首不見尾。地也實化，熔漿生魂，脩脩長虯，土靈幽幽。長也百里，以炎脈爲家，隱秘而不出。人也山起，四足雙翼，是爲最弱，而數衆然。雖生最爲凡，心思有靈，壽限，而因有志，有志，而入人文、作人王，因統天下。</p>
+    <p>話說龍祖之神金帝（）安有三子，是生三龍。長曰天，次曰地，三曰人。天也虛生，空海覺靈，巍巍蟒蛟，神威滔滔。長也不知幾千里，神龍見首不見尾。地也實化，熔漿生魂，脩脩長虯，土靈幽幽。長也百里，以炎脈爲家，隱秘而不出。人也山起，四足雙翼，是爲最弱，而數衆然。雖生最爲凡，心思有靈，壽限，而因有志，有志，而入人文、作人王，因統天下。</p>
     <p>再說天龍，或稱天蛟，生于深海，雷雨成形，其與仙不上下，威鎮四方，天下莫敵。然以其強承上天之機，爲天劫之化身，一世安容是多邪哉，故有言曰：一龍霸一海，一海無二龍，又曰：是禽獸之王，天地之驕。天蛟壽漫，鮮涉凡間，因隱，自享大道，而黎民鮮知其存。</p>
     <p>凡例有外，外者玄陽。玄陽者，或謂玄陽海王，靈間之東乾海君也。不隱反顯，立勢一方，縱横萬里海域，以海外人龍爲臣，陸人謂之玄陽府。天元大陸之三境七地，合而不可比。玄陽王一喜怒無常，暴虐不卻，故陸中靈族懼東海，不敢遠出水上。陸上人龍相少，不能與人間平論，其因是人龍近乎全聚玄陽下，爲玄阳臣奴。</p>
     <p>是玄陽矣，千丈宫殿，獨自樂樂。妾妃百十，戱弄雲雨，侍卫千百，拘刑背民。其下奴隸萬千，收寶供物，身爲賤民，苦苦其生。天蛟皇威，能壓萬龍，聞而生畏，見而禁身。受其寵若天賞，受其虐若天罰，玄雷霹靂，奇凶異殘，違其命逮而以刑之，求生不能求死不得。而律法森森然，不慎易僭，而小過大過然，輕犯重處。故謂暴君。</p>
@@ -124,8 +127,8 @@
     <p>自<u>聞</u>代或早之，麗州已立仙宗，曰麗州劍派。弟少而限於縣，鮮出因少聞其存。則同在芒炎亂天下之時，曾有宗主精彩絶豔，劍法無雙，能越境而戰。金丹滿期，而弑聚嬰。同任麗州府尹，律國官，貌青年春，因民公呼官爺，私言麗州郎。昔吾先祖居<u>律蘭</u>北界，南有大律朝歌，北有<u>諸蘭</u>蠻野。安文之變順遍天下，吾祖難免動蕩。時芒炎軍來家堡，吾氏昔貧少友，又近漢兵〔安文取天下而建漢四十月而崩故有曰漢〕速潰四散。某祖姑逃於諸蘭草地，即脫芒炎劫而入<u>遼</u>蘭災。諸蘭之北遼者，生而猛悍，天資勝然，雖人族則高手衆衆。是夷部好獵吾龍家收皮作衣，祖姑遭其聚嬰凶手，追杀近月，性命一綫，南入亂國河東，追至麗州林中。是千鈞一髮將死之多冤，一劍若雷虹天外而來，截北遼殺手，但見蒼黑披衣，隱有緋内，負手踏天而來，金丹之修而輕住聚嬰，從容行禮，回解外衣，見四品官服，緋綢魚帶。提劍作戰，百回而不分上下，記云遼人修金，劍師修木，木金所克隱有不妙。俄祖姑聞傳音，平然其辭而明記至崩，曰：仙子見時。請賜神火。又百回而遼人步差，一時有缺，祖姑吐火，火克金而殺之。蠻盡，而再作禮，稱己曰楊玉鈞，字指璧，麗州尹是也。賜祖姑仙藥，請留麗州林中休愈。戰時之緊，楊尹未送，見無命危而辭之。數十載逝，漢立速崩，李氏平天下，祖姑又訪麗州，擕家之命。吾家助李得功，命爲镇北侯，後承命滅遼。其請府尹出山，隨征北蠻而爲国師，而如願可賜呂龍尊姓。楊尹應之。今麗州劍派依居<u>冬來</u>〔龍語曰馬砬亥〕，固我國而師吾民。</p>
     <p>又有詩曰：</p>
     <blockquote>
-        青林百里不生荒，三縣平安一刄光。<br>
-        亂世兵災誰可免，獨依聖劍麗州郎。
+        青林百里不生荒（（三縣平安一刄光<br>
+        亂世兵災誰可免（（獨依聖劍麗州郎
     </blockquote>
     <p>
         是或爲証。
@@ -144,7 +147,7 @@
     <p>詩曰：</p>
 
     <blockquote>
-        <p>亡朝故貴避金鋒，選任正音帥百宗。<br>人國終逃龍國隷，七分天下自圖封。<br>西邦王子求佳配，劫寶屠蛟獻玉容。<br>正座怒言民土滅，誰家敗過一千龍？</p>
+        <p>亡朝故貴避金鋒（（選任正音帥百宗<br>人國終逃龍國隷（（七分天下自圖封<br>西邦王子求佳配（（劫寶屠蛟獻玉容<br>正座怒言民土滅（（誰家敗過一千龍</p>
     </blockquote>
 
     <p>六百載前龍朝崩，皇沙尊國萬歳宏歷就止。龍氏受戮之重，死有八成，存者奔東北之高險，舔傷蓄力。人朝立，而再建沙國，百王之王座下八國合拜，曰婆娑〔讀巴沙〕其最，又曰阿勒莫、曰康托、曰戈羅、曰真那、曰阿赦蘭、曰拉密、曰薩瑪汗七次也。而是故國龍氏則建邦於山，選位正音者統和百家，故謂是正音家，沙人又稱龍居，不題。且言立國未立平，人既取天下，而弗滿人心，社稷變多，天子更易，不題。</p>
@@ -152,6 +155,35 @@
     <p>但說東北之國，薩瑪汗是也，西接真那，東臨龍居，南有荒原，北有蠻夷。曾在舊天之下是邦連山通水，運寶稼穀，多有龍氏故鄉，而金銀如水然，可自滅龍之征成業，是地自中改邊，氣運衰然。時新國三百載薩瑪汗室有一太子，名闕，求娶南國康托某公主，而受康王之拒。薩瑪汗者，小國也，窮有金寶。即康托未大，依勝於是邦矣，安不惜愛女送於僻鄉？故設天價。隡瑪汗室經十世之风雨，已易三家，彼時王室囊空如洗，往年饑災已蕩國庫，奉不出彩禮。而太子知敏多謀，自尋金機，自然目望北國龍居。龍氏崩，逃於山中，擕金寶無數。若凡人能翻萬龍之國，一邦弑一龍不亦輕乎？但成，寶財如山，不亦得乎？而未思正音矣。周知茲王正音常居山寨不出，不治界疆。太子點二十精將，親師北行，暗觀山地四旬有餘，瞄一孤龍，穴於外野，不見同部，又不見之龍居之往來。一夜偷近，雷霆出手，取其不料，但見鮮血四濺，怒吟回響，邪火止明一息，夜墨再番来襲。夜間再來，龍已死，而太子方多伤無喪。大賀而各取千金萬珠，劫寶疾反人域。因奉上彩禮，康托王與嫁小女於薩瑪汗，二人歡然，不題。</p>
 
     <p>卻說那龍死有多冤，屍暴多月，魔氣怨氣徐積，一日有遠親偶來訪之，原來是龍有部，不過鮮相訪耳。見其惨形，大驚失色，忙傳餘部，衆見其所爲殺，獻奏於正音，具序其詳。正音發間之人國，速聞薩瑪汗太子大俠雄功，竟殺一龍，娶大國公主云云。報回正音，是龍君大怒宣敕曰：滅薩瑪汗，殺盡其民，以正國法，以雪弑犯，並以懾人國豎子，免再生圖龍居之意。點名飛軍一千龍，晝來薩瑪汗。小國故有珍寶詭器，又何比千龍天軍。大國婆娑，皇沙之心，自有能與正音相抗之力，而正出繼國之爭，未能師兵援戰。正音自有分寸，薩瑪汗外，寸土不傷，薩瑪汗内，夷爲平地。不論男女老幼，皆死於龍焰之下。時天子理朝，領軍來時，是邦已故，八國變七。正音退山，而皇沙莫可奈之。</p>
+</div>
+
+<div class="juan">
+    <h2 id="lianglong">兩龍之傳頌歌</h2>
+
+    <p>
+        兩龍之傳，龍家兄弟。二明之神，御雨月尊。法護庶人，大道無淵調風雨，得罪元尊，金帝浪怒放萬里。古之二月鎮天，今之一月驅魔。而天是有暴，則風固有斂。
+    </p>
+    <p>
+        藏書<a href="/shenhai/shxt#one">《神海閑談》之首篇者</a>言是二神也，其辭自龍語歌曲而譯，而以散文宜讀。又有作家出乎<u>周</u>，欲以敬是二神，又作一頌曰。
+    </p>
+
+    <blockquote>
+        <p>
+            灰土日烈兮帝羲恩盈（（凡身神诞兮龙家弟兄<br>
+            深山雄雄兮缭雲重重（（鳞甲海湛兮双目晨彤<br>
+            荒土日灼兮洪水滂沛（（饥哉亡哉兮何数死害<br>
+            双神观难兮莫不流泪（（民生之艰兮冷望聿愧<br>
+            幸恩帝羲兮灵启仙生（（绕缠浩法兮气宿道成<br>
+            众生哀鸣兮一祷灵醒（（誓守凡庶兮一令玄冥<br>
+            双首仰兮敕浩天（（（（暴雨静兮虐风迁<br>
+            风雨和兮民物熙（（（（香火多兮天外疑<br>
+            帝㫨怒兮震地燃天（（（）金帝下兮皆必颤颠<br>
+            谁人逆道兮谁人伪神（（敢诋世久兮敢鄙制真<br>
+            欲降万苦兮欲赐分尸（（然神必珍兮同血不夷<br>
+            别有刑罚兮分放散弃（（一囚岱山兮一逐远地<br>
+            因天地衡兮易常交替（（风雨时和兮苍生得憩
+        </p>
+    </blockquote>
 </div>
 
 </c-box>
